moving ecs manager and entity to external module

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -120,23 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import uuid\n",
-    "\n",
-    "\n",
-    "class Entity:\n",
-    "    def __init__(self, id=None, name=\"empty\"):\n",
-    "        \"\"\"Simple Entity class with a unique identifier for each entity\"\"\"\n",
-    "        # @note 🧠 : Id is how components are identified, NEEDS to be FIRST argument\n",
-    "        self.id = id or self.generate_unique_id()\n",
-    "        self.name = name\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def generate_unique_id():\n",
-    "        return str(uuid.uuid4())\n"
+    "from library.entity import Entity"
    ]
   },
   {
@@ -161,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,123 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# type variable `T`. This allows you to define a function that works with any\n",
-    "# type, while still providing type hints for better code readability and\n",
-    "# editor support.\n",
-    "T = TypeVar(\"T\")\n",
-    "\n",
-    "\n",
-    "# Pythonic to name suffix ABC for abstract base classes, instead of `Interface``\n",
-    "class ComponentManagerABC(ABC):\n",
-    "    \"\"\"Interface for a Component Manager Class\"\"\"\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def add_component(self, entity, component) -> None:\n",
-    "        \"\"\"Add a component to an entity\"\"\"\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def remove_component(self, entity, component_type: Type) -> None:\n",
-    "        \"\"\"Remove a component of a specific type from an entity\"\"\"\n",
-    "\n",
-    "    #  The `-> T` part indicates that the function returns a value of type `T`\n",
-    "    # - Since `T` is a generic type variable, it means that the return type of\n",
-    "    # this function is the same as the type passed to the `component_type`\n",
-    "    # parameter\n",
-    "    @abstractmethod\n",
-    "    def get_component(self, entity, component_type: Type[T]) -> T:\n",
-    "        \"\"\"Get a component of a specific type from an entity\"\"\"\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def gather_entities_with_all_components(\n",
-    "        self, component_types: List[Type]\n",
-    "    ) -> Optional[List[Entity]]:\n",
-    "        \"\"\"Gather a list of entities that have ALL of the specified COMPONENTS\"\"\"\n",
-    "\n",
-    "\n",
-    "# Implement a simple ComponentManager class that manages a dictionary of components\n",
-    "class ComponentManager(ComponentManagerABC):\n",
-    "    # Define constants for the event names to publish and subscribe to\n",
-    "    ADD_COMPONENT = \"add_component\"\n",
-    "    REMOVE_COMPONENT = \"remove_component\"\n",
-    "\n",
-    "    def __init__(self, event_manager: PubSubEventManager):\n",
-    "        # With a `defaultdict`, you can directly add a component without first\n",
-    "        # checking if the `entity.id` exists in `self.components`.\n",
-    "        # The `defaultdict` is a specialized version of the built-in `dict` that\n",
-    "        # provides a default value for a key if the key is not found in the \n",
-    "        # dictionary. In this case, if a key is not found, it will automatically \n",
-    "        # create a new empty dictionary as its value.\n",
-    "        # - simplifies the code for `add_component`\n",
-    "        self.components : Dict[int, Dict[Type, Any]] = defaultdict(dict)\n",
-    "        self.event_manager = event_manager\n",
-    "\n",
-    "    def add_component(self, entity, component) -> None:\n",
-    "        # - defaultdict will automatically create a new dictionary for the entity\n",
-    "        # if it does not exist : greatly simplifies the code\n",
-    "        # - check if component already exists\n",
-    "        # - When checking if an object is an instance of a class, it's recommended\n",
-    "        # to use the `isinstance` function instead of directly comparing types\n",
-    "        # This allows you to handle cases where `component` is an instance of a\n",
-    "        # subclass of the expected component type\n",
-    "        if any(\n",
-    "            isinstance(c, type(component)) for c in self.components[entity.id].values()\n",
-    "        ):\n",
-    "            raise ValueError(\n",
-    "                f\"[ERROR] tried to --add_component-- [{type(component).__name__}] that already exists on entity [{entity.name}]\"\n",
-    "            )\n",
-    "        self.components[entity.id][type(component)] = component\n",
-    "        self.event_manager.publish(\n",
-    "            ComponentManager.ADD_COMPONENT, entity=entity, component=component\n",
-    "        )\n",
-    "\n",
-    "    def remove_component(self, entity, component_type: Type) -> None:\n",
-    "        try:\n",
-    "            del self.components[entity.id][component_type]\n",
-    "            self.event_manager.publish(\n",
-    "                ComponentManager.REMOVE_COMPONENT,\n",
-    "                entity=entity,\n",
-    "                component_type=component_type,\n",
-    "            )\n",
-    "        except KeyError:\n",
-    "            raise ValueError(\n",
-    "                f\"[ERROR] tried to --remove_component-- [{component_type.__name__}] that does not exist on entity [{entity.name}]\"\n",
-    "            )\n",
-    "\n",
-    "    def get_component(self, entity, component_type: Type[T]) -> T:\n",
-    "        # Because `None` is not compatible with the expected return type `T`\n",
-    "        # - To fix this issue, you can use the `in` keyword to check if the\n",
-    "        # `component_type` key exists in the `self.components[entity.id]`\n",
-    "        # dictionary before returning its value\n",
-    "        if (\n",
-    "            entity.id in self.components\n",
-    "            and component_type in self.components[entity.id]\n",
-    "        ):\n",
-    "            return self.components[entity.id][component_type]\n",
-    "        else:\n",
-    "            raise ValueError(\n",
-    "                f\"[ERROR] tried to --get_component-- [{component_type.__name__}] that does not exist on entity [{entity.name}]\"\n",
-    "            )\n",
-    "\n",
-    "    def gather_entities_with_all_components(\n",
-    "        self, component_types: Optional[List[Type]]\n",
-    "    ) -> List[Entity]:\n",
-    "        # early exit with None if no component types passed in\n",
-    "        if component_types is None:\n",
-    "            return []\n",
-    "        # @audit 💨 : Convert the list of component types to a set for faster lookup\n",
-    "        # - in O(1) time instead of O(n) time where n is # of component types\n",
-    "        # - order of component types passed in does not matter, any permutation\n",
-    "        # will give the same result\n",
-    "        component_set = set(component_types)\n",
-    "        entities = []\n",
-    "        for entity_id, components in self.components.items():\n",
-    "            if component_set.issubset(set(components.keys())):\n",
-    "                entities.append(Entity(entity_id))\n",
-    "        return entities\n"
+    "from library.ecs_manager import ComponentManager"
    ]
   },
   {
@@ -435,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,40 +937,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[entities] on_init gathering system cache for InputSystem\n",
-      "[entities] on_init gathering system cache for PositioningSystem\n",
-      "[entities] on_init gathering system cache for RotationalSystem\n",
-      "[entities] on_init gathering system cache for AnimateAsteroidsSystem\n",
-      "[entities] on_init gathering system cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <__main__.Entity object at 0x10d0cee50>\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <__main__.Entity object at 0x10d0ce520>\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n"
+     "ename": "NameError",
+     "evalue": "name 'ComponentManager' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb Cell 40\u001b[0m in \u001b[0;36m9\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m \u001b[39m# Only run if this is being executed directly\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=84'>85</a>\u001b[0m \u001b[39m# - prevents the code from being run when imported\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=85'>86</a>\u001b[0m \u001b[39m# @note 🧠 : __name__ is built-in variable in Python that represents :\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=86'>87</a>\u001b[0m \u001b[39m# - the name of the current module\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=87'>88</a>\u001b[0m \u001b[39m# - When a script is run, Python sets the `__name__` variable to `'__main__'`\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m \u001b[39m# for the script being executed\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=89'>90</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m     main()\n",
+      "\u001b[1;32m/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb Cell 40\u001b[0m in \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m context_sys \u001b[39m=\u001b[39m on_awake()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m event_manager \u001b[39m=\u001b[39m PubSubEventManager()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m c_manager \u001b[39m=\u001b[39m ComponentManager(event_manager)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# [INIT] - game ENTITIES\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# @note 🧠 : Populate entities BEFORE systems, so we can cache entities on\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# system inits\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Create ship\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m spawn_ship(c_manager)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ComponentManager' is not defined"
      ]
     }
    ],
@@ -1212,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
