WIP: unit test component manger and gather entity

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from library.component import ComponentABC, ABC, abstractmethod\n",
     "from collections import namedtuple\n",
-    "from abc import ABC, abstractmethod\n",
+    "\n",
     "\n",
     "# common data types\n",
     "KeyFrame = namedtuple(\"KeyFrame\", [\"tick\", \"value\"])\n",
-    "\n",
-    "\n",
-    "class ComponentABC(ABC):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        pass\n",
     "\n",
     "\n",
     "# input handler\n",
@@ -248,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,19 +933,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ComponentManager' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb Cell 40\u001b[0m in \u001b[0;36m9\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m \u001b[39m# Only run if this is being executed directly\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=84'>85</a>\u001b[0m \u001b[39m# - prevents the code from being run when imported\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=85'>86</a>\u001b[0m \u001b[39m# @note 🧠 : __name__ is built-in variable in Python that represents :\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=86'>87</a>\u001b[0m \u001b[39m# - the name of the current module\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=87'>88</a>\u001b[0m \u001b[39m# - When a script is run, Python sets the `__name__` variable to `'__main__'`\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m \u001b[39m# for the script being executed\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=89'>90</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m     main()\n",
-      "\u001b[1;32m/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb Cell 40\u001b[0m in \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m context_sys \u001b[39m=\u001b[39m on_awake()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m event_manager \u001b[39m=\u001b[39m PubSubEventManager()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m c_manager \u001b[39m=\u001b[39m ComponentManager(event_manager)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# [INIT] - game ENTITIES\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# @note 🧠 : Populate entities BEFORE systems, so we can cache entities on\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# system inits\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Create ship\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/asteroids_ecs.ipynb#X54sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m spawn_ship(c_manager)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ComponentManager' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[entities] on_init gathering system cache for InputSystem\n",
+      "[entities] on_init gathering system cache for PositioningSystem\n",
+      "[entities] on_init gathering system cache for RotationalSystem\n",
+      "[entities] on_init gathering system cache for AnimateAsteroidsSystem\n",
+      "[entities] on_init gathering system cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid>\n",
+      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid>\n",
+      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid>\n",
+      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid>\n",
+      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid>\n",
+      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n"
      ]
     }
    ],
@@ -1058,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
